welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:13: error: ':' expected but ')' found.
	def faireV(c) {
                    ^MethodsPicture:36: error: identifier expected but '}' found.
	}
        ^MethodsPicture:71: error: Unmatched closing brace '}' ignored here
}
^